--- a/PAY/public/clickboard.css
+++ b/PAY/public/clickboard.css
@@ -36,3 +36,26 @@
     display: none;
   }
   
+  
+
+.price {
+    font-size: 14px;
+    color: #bddab0;
+    font-weight: bold;
+}
+
+.original-price {
+    text-decoration: line-through;
+    margin-right: 5px;
+    color: #e40909;
+}
+
+.price .discounted-price {
+    color: #28a745;
+    font-weight: bold;
+}
+
+.discount {
+    font-size: 14px;
+    color: #e63946;
+}
