--- a/PAY/public/clickboard.css
+++ b/PAY/public/clickboard.css
@@ -47,7 +47,7 @@
 .original-price {
     text-decoration: line-through;
     margin-right: 5px;
-    color: #e40909;
+    color: #ffffff;
 }
 
 .price .discounted-price {
