--- a/PAY/public/clickboard.css
+++ b/PAY/public/clickboard.css
@@ -59,3 +59,17 @@
     font-size: 14px;
     color: #e63946;
 }
+
+
+.new-arrival {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: #ff4757;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
